# BrandShield-AI

./: .gitignore  README.md  app.py  db.py  detector_engine.py  forensic_report.py  pyproject.toml  requirements.txt
docs/: MIGRATION_NOTES.md
scripts/: config.py  convert_to_yolo.py  evaluate_classifier.py  generate_report.py  gradcam.py  inference.py  prepare_dataset.py  preprocess.py  train_classifier.py  tune_threshold.py  utils.py  validate_dataset.py
src/: detector_engine.py
src/brandshield_ai/: __init__.py  config.py  detector_engine.py  forensic_report.py
src/brandshield_ai/data/: validation.py
